||      Version 3.7             ||
==================================

+ Added parameter(s) '-v' / '--version' to display the version of the script
+ Added parameter '--autoupdate-script' for full automate update process of your TS3UpdateScript - excluding configs/
+ Added support for two new parameters for su-command, if you execute the script with non-root permissions
! Updated docs/UPDATE_GUIDE.txt
* Updated cronjob installer for supporting all parameters
*/- Removed second needed parameter 'latestStableVersion.txt' for parameter '--latest-version'; it will use the version of configs/latestStableVersion.txt
! If you have used this feature in past, just remove the parameter to the file

==================================
||      Version 3.6.3           ||
==================================

* Deleted first/standard password-file; it will now created with a stream redirection instead of coping the file
* Changed donation link
! Extended README.md
+ --help: Added 'You may will test the latest version first' to parameter '--latest-version'
* Renamed parameter '--check-for-update' to '--update-script'
* Changed && to ||, to accept 'y' and 'yes' as answer for the script update
+ Added facebook fanpage to header of script
* Temp-file 'auto_update_text.txt' was created in root directory of TS3UpdateScript, but not deleted
* Fixed non-working script update
* Set raw-GitHub link for better searching for the latest script version
* Outsourced TS3UpdateScript update mechnism to own script: .updateScript.sh
! ATTENTION: Do *NOT* execute the script manually - it's your own risk! Use instead ./TS3UpdateScript.sh --update-script

==================================
||      Version 3.5.1           ||
==================================

! No code was changed! Be sure, that you've installed the package 'ca-certificates' for fetching the latest script version - for further details execute 'apt-cache show ca-certificates'

==================================